--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FiveTastic</title>
+    <title>RadioShout</title>
     <script src="/vendor/markdown.js"></script>
     <script src="/fivetastic/vendor/all.js"></script>
     <!--<script src="/fivetastic/init.js"></script> -->
