--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>RadioShout</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <script src="/vendor/markdown.js"></script>
     <script src="/fivetastic/vendor/all.js"></script>
     <!--<script src="/fivetastic/init.js"></script> -->
