update chi siamo etc

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </head>
   <body>
     <div id='loading'>
-      create sites and apps with HAML, CoffeeScript and Sass on the clientside!
+      RadioShout, il sito web della radio!
       
-      EDIT ME - this is basically your meta descrition, change this text and the page title before before publishing the site
+      Radio Shout è un progetto culturale, che si propone di stimolare attraverso la musica, arte, attualità, letteratura e non solo, la creatività di questa generazione.
     </div>
   </body>
 </html>
