updated image centering

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <script src="/vendor/markdown.js"></script>
     <script src="/fivetastic/vendor/all.js"></script>
+    <script src="/vendor/jquery_imagesloaded.js"></script>
+    <script src="/vendor/jquery_clean.js"></script>
     <!--<script src="/fivetastic/init.js"></script> -->
     <!-- Load the compiled version of the following files  -->
-    <!-- 
+    <!--
     <script src="/fivetastic/vendor/coffeescript.js"></script>
     <script src="/fivetastic/vendor/haml.js"></script>
     <script src="/fivetastic/vendor/sass.js"></script>
@@ -16,7 +18,7 @@
     -->
     <!-- TODO: require zepto option -->
     <style type='text/css'>
-      body { 
+      body {
         color: #FFF;
       }
     </style>
@@ -24,7 +26,7 @@
   <body>
     <div id='loading'>
       RadioShout, il sito web della radio!
-      
+
       Radio Shout è un progetto culturale, che si propone di stimolare attraverso la musica, arte, attualità, letteratura e non solo, la creatività di questa generazione.
     </div>
   </body>
